--- a/src/app/blog/blog.component.scss
+++ b/src/app/blog/blog.component.scss
@@ -13,12 +13,39 @@
     &-itemHeading {
         font-weight: bold;
     }
+
+    &-image {
+        width: 50%;
+        height: auto;
+    }
+
+    &-sectionImage {
+        float: right;
+        width: 25%;
+        height: auto;
+    }
 }
 
 @media (max-width: 768px) {
     .Blog {
         &-entryTitle {
             font-size: 16px;
+        }
+
+        &-image {
+            width: 100%;
+            height: auto;
+        }
+
+        &-section {
+            display: flex;
+            flex-direction: column;
+        }
+
+        &-sectionImage {
+            width: 50%;
+            height: auto;
+            order: 2;
         }
     }
 }
