--- a/src/app/about/about.component.scss
+++ b/src/app/about/about.component.scss
@@ -28,3 +28,40 @@
 	margin-left: auto;
 	margin-right: auto;
 }
+
+@media (max-width: 768px) {
+    .About {
+		&-withPictures {
+			display: flex;
+			flex-direction: column;
+	
+			p {
+				width: 100%;
+				margin-right: 15px;
+			}
+		}
+
+		&-pictures {
+			width: 100%;
+			height: 300px;
+		}
+	}
+
+    .carousel-item > img {
+        width: 100%;
+        height: auto;
+
+		margin-top: auto;
+		margin-bottom: auto;
+    }
+
+	.carousel-item-next > img,
+	.carousel-item-prev > img,
+	.carousel-item.active > img {
+		height: 300px;
+		width: auto;
+
+		margin-top: auto;
+		margin-bottom: auto;
+	}
+}
