--- a/src/app/blog/blog.component.scss
+++ b/src/app/blog/blog.component.scss
@@ -19,9 +19,15 @@
         height: auto;
     }
 
-    &-sectionImage {
+    &-sectionVerticalImage {
         float: right;
         width: 25%;
+        height: auto;
+    }
+
+    &-sectionHorizontalImage {
+        float: right;
+        width: 50%;
         height: auto;
     }
 }
@@ -42,10 +48,39 @@
             flex-direction: column;
         }
 
-        &-sectionImage {
+        &-sectionVerticalImage {
             width: 50%;
             height: auto;
             order: 2;
         }
+
+        &-sectionHorizontalImage {
+            width: 100%;
+            height: auto;
+            order: 2;
+        }
+
+        &-slideshow {
+            width: 100%;
+            height: 300px;
+        }
     }
+
+    .carousel-item > img {
+        width: 100%;
+        height: auto;
+
+		margin-top: auto;
+		margin-bottom: auto;
+    }
+
+	.carousel-item-next > img,
+	.carousel-item-prev > img,
+	.carousel-item.active > img {
+		height: 300px;
+		width: auto;
+
+		margin-top: auto;
+		margin-bottom: auto;
+	}
 }
